Updated links section, added pdf

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="shortcut icon" href="img/stonelogo.ico" type="image/x-icon">
 		<link rel="icon" href="img/stonelogo.ico" type="image/x-icon">
 
-		<title>Janet Majors | Massage Therapy</title>
+		<title>Janet Majors | Massage</title>
 
 		<!-- Google Fonts -->
 		<link href='http://fonts.googleapis.com/css?family=Raleway:400,500,600,700' rel='stylesheet' type='text/css'>
@@ -168,17 +168,25 @@
 				</div>
 			</div>
 
-			<div class="well" id="links">
+			<div class="well links" id="links">
 				<h2>Links</h2>
-				<p>A special thank you to the following instructional websites and image sources:</p>
-				<p><a href="https://www.flickr.com/photos/josefeliciano/">Jose Feliciano </a>- Header Image</p>
-				<p><a href="https://www.flickr.com/photos/rkramer62/">Rachel Kramer </a>- Image Source</p>
-				<p><a href="http://ianlunn.github.io/Hover/">Ian Lunn </a>- Hover Effect Code</p>
-				<p><a href="http://subtlepatterns.com/mooning/">Joel Klein </a>- Background Image</p>
-				<p><a href="http://picons.me/download-social.php">http://picons.me/download-social.php </a>- Social Media Icons</p>
-				<p><a href="http://getbootstrap.com/">http://getbootstrap.com/ </a>- Bootstrap Template</p>
-				<p><a href="https://teamtreehouse.com/">https://teamtreehouse.com/ </a>- Tutorials</p>
-				<p><a href="http://www.portlandcodeschool.com/">http://www.portlandcodeschool.com/ </a>- Guidance</p>
+				<div class="row items">
+					<div class="col-md-6">
+						<p>To learn more about massage therapy, please download the following informational pamphlets:</p>
+						<p><a href="pamphlet.pdf">Your Registered Massage Therapist and You</a></p>
+					</div>
+					<div class="col-md-6">
+						<p>A special thank you to the following instructional websites and image sources:</p>
+						<p><a href="https://www.flickr.com/photos/josefeliciano/">Jose Feliciano </a>- Header Image</p>
+						<p><a href="https://www.flickr.com/photos/rkramer62/">Rachel Kramer </a>- Image Source</p>
+						<p><a href="http://ianlunn.github.io/Hover/">Ian Lunn </a>- Hover Effect Code</p>
+						<p><a href="http://subtlepatterns.com/mooning/">Joel Klein </a>- Background Image</p>
+						<p><a href="http://picons.me/download-social.php">http://picons.me/download-social.php </a>- Social Media Icons</p>
+						<p><a href="http://getbootstrap.com/">http://getbootstrap.com/ </a>- Bootstrap Template</p>
+						<p><a href="https://teamtreehouse.com/">https://teamtreehouse.com/ </a>- Tutorials</p>
+						<p><a href="http://www.portlandcodeschool.com/">http://www.portlandcodeschool.com/ </a>- Guidance</p>
+					</div>
+				</div>
 			</div>
 
 			<div class="well" id="feedback">
@@ -187,8 +195,6 @@
 					<iframe src="https://docs.google.com/forms/d/1romGFq6zQKBypyLoQX8muUZX-SaVi1dmzBBdwmQnhZs/viewform?embedded=true" width="760" height="500">Loading...</iframe>
 				</div>
 			</div>
-
-			<hr>
 
 			<footer>
 				<div class="socialmedia">
