--- a/index.html
+++ b/index.html
@@ -64,13 +64,13 @@
 				</div>
 				<div class="navbar-collapse collapse">
 					<ul class="nav navbar-nav">
-						<li><a href="#about">About</a></li>
-						<li><a href="#offerings">Offerings</a></li>
-						<li><a href="#hours">Hours</a></li>
-						<li><a href="#location">Location</a></li>
-						<li><a href="#contact">Contact</a></li>
-						<li><a href="#links">Links</a></li>
-						<li><a href="#feedback">Feedback</a></li>						
+						<li><a href="#about" data-toggle="collapse" data-target=".navbar-collapse">About</a></li>
+						<li><a href="#offerings" data-toggle="collapse" data-target=".navbar-collapse">Offerings</a></li>
+						<li><a href="#hours" data-toggle="collapse" data-target=".navbar-collapse">Hours</a></li>
+						<li><a href="#location" data-toggle="collapse" data-target=".navbar-collapse">Location</a></li>
+						<li><a href="#contact" data-toggle="collapse" data-target=".navbar-collapse">Contact</a></li>
+						<li><a href="#links" data-toggle="collapse" data-target=".navbar-collapse">Links</a></li>
+						<li><a href="#feedback" data-toggle="collapse" data-target=".navbar-collapse">Feedback</a></li>						
 					</ul>
 				</div> <!-- .nav-collapse-->
 			</div>
